--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <script type="text/javascript" src="script.js"></script>
-  <link rel="stylesheet" href=".css">
+  <link rel="stylesheet" href="style.css">
   <title>おすすめのプリ機紹介</title>
 </head>
 
