--- a/index.html
+++ b/index.html
@@ -13,23 +13,36 @@
 <body background="IMG_6445.jpg">
 
 <body>
-  <h1>💜お気に入りのプリ機💜</h1>
+  <div id="buttonsection">
+    <h1>💜お気に入りのプリ機💜</h1>
+    <button type="button">IDLY</button>
+    <button type="button">Bloomit</button>
+    <button type="button">VERUA</button>
+    <br>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <!-- <div id="purisection"> -->
     <div id="prinsecesection">
-      <p>1.IDOLY</p>
+      <h3>1.IDOLY</h3>
       <img src="IMG_6422.jpg">
       <img src="IMG_6423.jpg" alt=""><br>
       アイドルっぽく盛れる！
     </div>
     <div id="decosection">
-      <p>2.Bloomit</p>
+      <h3>2.Bloomit</h3>
       <img src="IMG_6403.jpg">
       <img src="IMG_6425.jpg" alt=""><br>
         大人数で撮れて盛れる！<br>
         おそろいのシールもデコれる<br>
     </div>
     <div id="flowersection">
-      <p>💖3.VERUA</p>
+      <h3>💖3.VERUA</h3>
       <img src="IMG_6428.jpg">
       <img src="IMG_6429.jpg"><br>
         大人っぽく可愛く儚い感じで盛れる！
@@ -40,14 +53,18 @@
     <br>
     <br>
     <div id="divsection">
-      <h2>FND受講での学び</h2>
-        <p>調べる力</p>
-        <p>難しいことへの取り組み方</p>
-        <p>プレゼン作成を通して、絵文字を表示したり、タグの意味を少しだけでも理解できた。</p>
-      <h3>このプレゼンで改善していきたいところ</h3>
-        <p>ボタンを作成し</p>
+      <h3>FND受講での学び</h3>
+        調べる力<br>
+        難しいことへの取り組み方<br>
+        <!-- プレゼン作成を通して、絵文字を表示したり、タグの意味を少しだけでも理解できた。<br> -->
+      <!-- <h3>このプレゼンで改善していきたいところ</h3> -->
+        <!-- <p>ボタンを作成し</p> -->
     <!-- </div> -->
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
 </body>
 
 </html>
