--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
   <div id="buttonsection">
     <h1>💜お気に入りのプリ機💜</h1>
-    <button type="button">IDLY</button>
-    <button type="button">Bloomit</button>
-    <button type="button">VERUA</button>
+    <!-- <button type="button" onclick="location.href=`decosection`;">IDLY</button> -->
+    <!-- <button type="button">Bloomit</button> -->
+    <!-- <button type="button">VERUA</button> -->
+    <a href="#prinsecesection">IDOLY</a>
+    <a href="#decosection">Bloomit</a>
+    <a href="#flowersection">VERUA</a>
     <br>
   </div>
   <br>
@@ -38,14 +41,14 @@
       <h3>2.Bloomit</h3>
       <img src="IMG_6403.jpg">
       <img src="IMG_6425.jpg" alt=""><br>
-        大人数で撮れて盛れる！<br>
-        おそろいのシールもデコれる<br>
+      大人数で撮れて盛れる！<br>
+      おそろいのシールもデコれる<br>
     </div>
     <div id="flowersection">
       <h3>💖3.VERUA</h3>
       <img src="IMG_6428.jpg">
       <img src="IMG_6429.jpg"><br>
-        大人っぽく可愛く儚い感じで盛れる！
+      大人っぽく可愛く儚い感じで盛れる！
     </div>
     <br>
     <br>
